--- a/src/assets/styles/common.scss
+++ b/src/assets/styles/common.scss
@@ -2,13 +2,12 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Arial', sans-serif;
   text-align: center;
+  box-sizing: border-box;
 }
 
 body {
-  background: rgb(20, 29, 208);
-  background: linear-gradient(216deg, rgb(28, 57, 159) 0%, rrgb(28, 123, 225)100%);
   width: 100%;
   min-height: 100vh;
   display: flex;
@@ -19,4 +18,5 @@ body {
 #app {
   width: 100%;
   min-height: 100vh;
+  margin: 0 auto;
 }
